cupt (2.10.4~) UNRELEASED; urgency=low

  * 

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 09 Jun 2019 12:42:22 +0200

cupt (2.10.3) unstable; urgency=low

  * debian:
    - control:
      - Use https for Homepage and Vcs-Git fields. Patch by Jelmer Vernooĳ.
    - libcupt4-2.lintian-overrides:
      - Added to override 'uses-dpkg-database-directly'.
  * test:
    - t/version.t: allow pluses and letters so the test cases still pass
      for NMUs. (Closes: #914058)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Mon, 10 Dec 2018 21:20:34 +0100

cupt (2.10.2) unstable; urgency=medium

  * lib:
    - cache:
      - Verifying repository signatures: fixed detecting 'public key not
        found' situations with recent versions of gpgv, which provide more
        than 6 fields for 'ERRSIG' status messages. Thanks to Santiago Vila
        for the report. (Closes: #902457)

 -- Eugene V. Lyubimkin <jackyf@debian.org>  Sat, 28 Jul 2018 11:56:13 +0200

cupt (2.10.1) unstable; urgency=medium

  * test:
    - t/manage/worker/packages/hooks/pre-install-pkgs/feeding-input.t:
      Increased hang-check timeout from 30s to 90s, giving more time to
      HPPA buildds. Thanks to John David Anglin for the investigation and
      Aaron M. Ucko for the report. (Closes: #882238)
  * lib:
    - system/resolver:
      - New class 'ImplicitReason'.
    - system/resolvers/native:
      - Add an appropriate reason for packages which will be implicitly
        auto-configured.
  * cmakelists:
    - Pass '-Wno-format-security' after environment-provided compile flags.
  * debian:
    - control:
      - Maintainer address is again myself instead of Alioth mailing list.
      - Bumped Standards-Version to 4.1.3, no changes needed.
      - Priority for 'cupt-dbg' is changed to 'optional', as suggested by
        lintian.
    - compat:
      - Bumped to 9.
    - source/format:
      - Introduced, with "3.0 (native)".
    - rules:
      - Pass '--parallel' after dh sequence name.