@@ -1,6 +1,7 @@
 cupt (2.10.4~) UNRELEASED; urgency=low
 
-  * 
+  * console:
+    - Auto-detect color support for more variants of 'xterm'-terminals.
 
  -- Eugene V. Lyubimkin <jackyf@debian.org>  Sun, 09 Jun 2019 12:42:22 +0200
 
